Created attachment 137124 [details] screenshot of paragraph alignment tab In Paragraph Dialog Align Tab 'Last line' drop down and 'Expand single word' check box are only meaningful when 'Justified' radio button is selected but remain enabled after 'Text direction' is changed. Steps to reproduce bug - 1) Format->Paragraph... Alignment Tab 2) click Justified radio button 3) select Justified in Last line drop down 3) select Left-to-right (LTR) or Right-to-Left (RTL) in Text direction drop down expected behavior: Last line fixed text and drop down and Expand single word check box disable current behavior: remain enabled
I confirm this bug. Version: 6.0.0.0.alpha0+ (x64) Build ID: 465092047d5fa6ec6dd369372e712d76554570ff CPU threads: 4; OS: Windows 6.19; UI render: default; TinderBox: Win-x86_64@42, Branch:master, Time: 2017-09-26_23:16:01 Locale: de-DE (de_DE); Calc: group
The correct solution is that if alignment is center or justified and text direction is changed, it shouldnt switch the radio button, as the problem still happens without doing step 3 of changing last line to justified. Maxim, Heiko, Stuart: thoughts?
I have set the patch for this to -1. Will amend on confirmation of correct behavior.
(In reply to Jim Raykowski from comment #3) > I have set the patch for this to -1. Will amend on confirmation of correct > behavior. Hi Jim, Which patch is it? OTOH, why the bug was set to RESOLVED FIXED?
(In reply to Xisco Faulí from comment #4) > (In reply to Jim Raykowski from comment #3) > > I have set the patch for this to -1. Will amend on confirmation of correct > > behavior. > > Hi Jim, > Which patch is it? > OTOH, why the bug was set to RESOLVED FIXED? Hi Xisco This was part of a multi fix patch listed under bug 107567 all having to do with the paragraph dialog Alignment and Indents & Spacing tabs. https://gerrit.libreoffice.org/#/c/45273/
Great, Thanks for the patch
Verified with Version: 6.3.2.2 (x64) Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE Calc: threaded