tdf#113275 Disable paragraph dialog align tab Justified controls

Change-Id: I74baea87225bc2a2847ec7f19bd8b54d48485d04